<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smartrefresh.layout.SmartRefreshLayout
    android:id="@+id/refresh_layout"
    style="@style/GlobalLayoutParentStyle"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/cl_game_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/content_padding_top_edge_small"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/ic_back"
                    style="@style/GlobalBackButtonStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_game_name"
                    style="@style/GlobalTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="60dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="@dimen/content_padding_status_bar_padding"
                    android:gravity="center_horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_game_cover"
                    android:layout_width="@dimen/game_detail_game_cover_size"
                    android:layout_height="@dimen/game_detail_game_cover_size"
                    android:layout_marginTop="@dimen/content_padding_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_game_name"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_game_cup_info"
                    style="@style/GlobalSecondaryTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_padding_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_game_cover"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_game_progress"
                    style="@style/GlobalSmallTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="@dimen/content_padding_content"
                    app:layout_constraintEnd_toStartOf="@+id/tv_first_cup_time"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_game_cup_info"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_game_progress_des"
                    style="@style/GlobalSecondarySmallerTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/game_progress"
                    app:layout_constraintEnd_toEndOf="@+id/tv_game_progress"
                    app:layout_constraintStart_toStartOf="@+id/tv_game_progress"
                    app:layout_constraintTop_toBottomOf="@+id/tv_game_progress"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_first_cup_time"
                    style="@style/GlobalSmallTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="@dimen/content_padding_content"
                    app:layout_constraintEnd_toStartOf="@+id/tv_last_cup_time"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toEndOf="@+id/tv_game_progress"
                    app:layout_constraintTop_toTopOf="@+id/tv_game_progress"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_first_cup_time_des"
                    style="@style/GlobalSecondarySmallerTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/first_cup"
                    app:layout_constraintEnd_toEndOf="@+id/tv_first_cup_time"
                    app:layout_constraintStart_toStartOf="@+id/tv_first_cup_time"
                    app:layout_constraintTop_toBottomOf="@+id/tv_first_cup_time"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_last_cup_time"
                    style="@style/GlobalSmallTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="@dimen/content_padding_content"
                    app:layout_constraintEnd_toStartOf="@+id/tv_total_time"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toEndOf="@+id/tv_first_cup_time"
                    app:layout_constraintTop_toTopOf="@+id/tv_game_progress"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_last_cup_time_des"
                    style="@style/GlobalSecondarySmallerTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/last_cup"
                    app:layout_constraintEnd_toEndOf="@+id/tv_last_cup_time"
                    app:layout_constraintStart_toStartOf="@+id/tv_last_cup_time"
                    app:layout_constraintTop_toBottomOf="@+id/tv_last_cup_time"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_total_time"
                    style="@style/GlobalSmallTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="@dimen/content_padding_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toEndOf="@+id/tv_last_cup_time"
                    app:layout_constraintTop_toTopOf="@+id/tv_game_progress"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_total_time_des"
                    style="@style/GlobalSecondarySmallerTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/total_time"
                    app:layout_constraintEnd_toEndOf="@+id/tv_total_time"
                    app:layout_constraintStart_toStartOf="@+id/tv_total_time"
                    app:layout_constraintTop_toBottomOf="@+id/tv_total_time"/>

                <android.support.constraint.Group
                    android:id="@+id/group_user_game_cup_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="tv_game_progress,tv_game_progress_des
                    ,tv_first_cup_time,tv_first_cup_time_des,tv_last_cup_time,tv_last_cup_time_des
                    ,tv_total_time,tv_total_time_des"/>
            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:id="@+id/ll_game_cup_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/cl_game_info"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</com.scwang.smartrefresh.layout.SmartRefreshLayout>